--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="https://www.firs.gov.ng/sites/Authoring/imageLibrary/be109fd6-b7f1-44f2-c5e2-e67fa6b55d8alogo.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -47,7 +47,7 @@
   <body>
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
-      <div class="d-flex align-items-center justify-content-between">
+      <div class="d-flex container align-items-center justify-content-between">
         <h1 class="logo">
           <img src="https://www.firs.gov.ng/sites/Authoring/imageLibrary/be109fd6-b7f1-44f2-c5e2-e67fa6b55d8alogo.png" />
           <!-- <a href="index.html">TAXLY<span>.</span></a> -->
@@ -55,7 +55,7 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-        <nav class="nav-menu d-none d-lg-block">
+        <nav class="  nav-menu d-none d-lg-block">
           <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#about">ABOUT</a></li>
@@ -83,7 +83,7 @@
             <li><a href="#team">FIRS Tax Forms</a></li>
             <li><a href="#contact">Tax Type/Rates</a></li>
             <li><a href="#contact">Procurement</a></li>
-            <li><a href="#contact">Support</a></li>
+            <!-- <li><a href="#contact">Support</a></li> -->
           </ul>
         </nav>
         <!-- .nav-menu -->
@@ -469,14 +469,14 @@
       <section id="cta" class="cta">
         <div class="container" data-aos="zoom-in">
           <div class="text-center">
-            <h3>Call To Action</h3>
+            <h3></h3>
             <p>
               Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
               cupidatat non proident, sunt in culpa qui officia deserunt mollit
               anim id est laborum.
             </p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <a class="cta-btn" href="#">GET STARTED</a>
           </div>
         </div>
       </section>
@@ -784,7 +784,10 @@
                   20 Sokode Crescent,
                   Wuse Zone 5,<br />
                   Abuja Nigeria<br /><br />
-                  <strong>Phone:</strong> +234 000 0000 000<br />
+                  <strong>Phone:</strong> 09074444441
+                  09074444442
+                  09072111111
+                  09073777777<br />
                   <strong>Email:</strong> helpdesk@firs.gov.ng​
                   enquiries@firs.gov.ng​
                   ​complaints@firs.gov.ng
@@ -814,21 +817,21 @@
               <h4>Useful Links</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">CIT Form</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Transfer Pricing Form</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">VAT Form</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
+                  <a href="#">PPT Form</a>
+                </li>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a href="#">WHT Form</a>
                 </li>
               </ul>
             </div>
@@ -837,22 +840,22 @@
               <h4>Our Services</h4>
               <ul>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Lorem Ipsum</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">National Tax Policy</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Lorem Ipsum</a>
+                  <a href="#">Tax Statistics/Reports</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Lorem Ipsum</a>
+                  <a href="#">Tax Laws</a>
                 </li>
                 <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Lorem Ipsum</a>
+                  <i class="bx bx-chevron-right"></i> <a href="#">Tax Treaties and Related Matters</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Lorem Ipsum</a>
+                  <a href="#">Tax Circulars, Regulations and Public Notices</a>
                 </li>
               </ul>
             </div>
