--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
         </nav>
         <!--/.Navbar -->
         <div class="container mt-5 mb-5">
-          <h1> Tax Revenue Collection</h1>
+          <h1> Tax Collection Report</h1>
           <div class="mini-chart">
             <div class="row">
               <div class="col-lg-4 col-sm-12 col-md-6">
