--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="https://www.firs.gov.ng/sites/Authoring/imageLibrary/be109fd6-b7f1-44f2-c5e2-e67fa6b55d8alogo.png" rel="icon" />
+    <link href="/SiteApplication/Style/dflip/css/themify-icons.css" rel="stylesheet" type="text/css"/>
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -213,19 +213,7 @@
           <div class="col-xl-2 col-md-4 col-6">
             <div class="icon-box">
               <i class="ri-store-line"></i>
-              <h3><a href="">Covid-19 Updates </a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4 col-6">
-            <div class="icon-box">
-              <i class="ri-bar-chart-box-line"></i>
-              <h3><a href="">e-Services </a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
-            <div class="icon-box">
-              <i class="ri-calendar-todo-line"></i>
-              <h3><a href="">Tax Reforms</a></h3>
+              <h3><a href="#">Covid-19 Updates </a></h3>
             </div>
           </div>
           <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
@@ -234,10 +222,23 @@
               <h3><a href=/main.html>Collection Report</a></h3>
             </div>
           </div>
+          <div class="col-xl-2 col-md-4 col-6">
+            <div class="icon-box">
+              <i class="ri-bar-chart-box-line"></i>
+              <h3><a href="#">Finance 2019 </a></h3>
+            </div>
+          </div>
+          <div class="col-xl-2 col-md-4 col-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="ri-calendar-todo-line"></i>
+              <h3><a href="#">Tax Reforms</a></h3>
+            </div>
+          </div>
+          
           <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
             <div class="icon-box">
               <i class="ri-database-2-line"></i>
-              <h3><a href="">Tax Refund</a></h3>
+              <h3><a href="#">Tax Refund</a></h3>
             </div>
           </div>
           
