--- a/main.html
+++ b/main.html
@@ -96,14 +96,14 @@
               <div class="col-lg-6 col-sm-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <canvas id="myChart" width="100" height="100"></canvas>
+                        <canvas id="myChart" display="false" width="100" height="100"></canvas>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 col-sm-12 col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <canvas id="myChart2" width="100" height="100"></canvas>
+                        <canvas id="myChart2" width="100" display="false" height="100"></canvas>
                     </div>
                 </div>
             </div>
@@ -295,18 +295,20 @@
       var myChart = new Chart(ctx, {
         type: "pie",
         data: {
-          labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+          labels: ["12% Corporate Income Tax ", "19% Individual Income Tax", 
+          "3% Withdrawing Tax", "5% Goods and Services Tax", "2% Property Tax",
+           "3% Stamp Duty"],
           datasets: [
             {
-              label: "# of Votes",
+              label: "Revenue Collection, 2019-2020",
               data: [12, 19, 3, 5, 2, 3],
               backgroundColor: [
-                "rgba(255, 99, 132, 0.2)",
-                "rgba(54, 162, 235, 0.2)",
-                "rgba(255, 206, 86, 0.2)",
-                "rgba(75, 192, 192, 0.2)",
-                "rgba(153, 102, 255, 0.2)",
-                "rgba(255, 159, 64, 0.2)",
+                "rgba(255, 0, 0, 1)",
+                "rgba(0, 0, 255, 1)",
+                "rgba(255, 255, 0, 1)",
+                "rgba(0, 255, 0, 1)",
+                "rgba(160, 32, 240, 1)",
+                "rgba(255, 165, 0, 1)",
               ],
               borderColor: [
                 "rgba(255, 99, 132, 1)",
@@ -324,6 +326,9 @@
           scales: {
             yAxes: [
               {
+                gridLines: {
+                  display: false
+               },
                 ticks: {
                   beginAtZero: true,
                 },
@@ -338,19 +343,20 @@
     var ctx = document.getElementById("myChart2").getContext("2d");
     var myChart2 = new Chart(ctx, {
       type: "bar",
+      // display="false",
       data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+        labels: ["April", "May", "June", "Aug", "Sep", "Oct"],
         datasets: [
           {
-            label: "# of Votes",
+            label: "Revenue Collection, 2019-2020",
             data: [12, 19, 3, 5, 2, 3],
             backgroundColor: [
-              "rgba(255, 99, 132, 0.2)",
-              "rgba(54, 162, 235, 0.2)",
-              "rgba(255, 206, 86, 0.2)",
-              "rgba(75, 192, 192, 0.2)",
-              "rgba(153, 102, 255, 0.2)",
-              "rgba(255, 159, 64, 0.2)",
+              "rgba(255, 99, 132, 1)",
+              "rgba(54, 162, 235, 1)",
+              "rgba(255, 206, 86, 1)",
+              "rgba(75, 192, 192, 1)",
+              "rgba(153, 102, 255, 1)",
+              "rgba(255, 159, 64, 1)",
             ],
             borderColor: [
               "rgba(255, 99, 132, 1)",
@@ -366,8 +372,18 @@
       },
       options: {
         scales: {
+          xAxes: [
+            {
+              gridLines: {
+                  display: false
+               },
+            },
+          ],
           yAxes: [
             {
+              gridLines: {
+                  display: false
+               },
               ticks: {
                 beginAtZero: true,
               },
@@ -379,49 +395,6 @@
   </script>
 
 
-<script>
-    var ctx = document.getElementById("myChart3").getContext("2d");
-    var myChart3 = new Chart(ctx, {
-      type: "doughnut",
-      data: {
-        labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-        datasets: [
-          {
-            label: "# of Votes",
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-              "rgba(255, 99, 132, 0.2)",
-              "rgba(54, 162, 235, 0.2)",
-              "rgba(255, 206, 86, 0.2)",
-              "rgba(75, 192, 192, 0.2)",
-              "rgba(153, 102, 255, 0.2)",
-              "rgba(255, 159, 64, 0.2)",
-            ],
-            borderColor: [
-              "rgba(255, 99, 132, 1)",
-              "rgba(54, 162, 235, 1)",
-              "rgba(255, 206, 86, 1)",
-              "rgba(75, 192, 192, 1)",
-              "rgba(153, 102, 255, 1)",
-              "rgba(255, 159, 64, 1)",
-            ],
-            borderWidth: 1,
-          },
-        ],
-      },
-      options: {
-        scales: {
-          yAxes: [
-            {
-              ticks: {
-                beginAtZero: true,
-              },
-            },
-          ],
-        },
-      },
-    });
-  </script>
 
 </body>
 </html>
