--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
           <div class="row">
             <div class="col-lg-3 col-md-6">
               <div class="footer-info">
-                <h3>Gp<span>.</span></h3>
+                <h3>FIRS<span>.</span></h3>
                 <p>
                   3 Araoti Street <br />
                   Revenue House,
