--- a/main.html
+++ b/main.html
@@ -71,7 +71,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">FIRS Form</a>
               </li>
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   id="navbarDropdownMenuLink-333"
@@ -88,7 +88,7 @@
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
